[gd_scene load_steps=5 format=3 uid="uid://d1tj6iwolbylw"]

[ext_resource type="Script" path="res://scripts/quest_dialogue_component.gd" id="1_b4b6k"]
[ext_resource type="Texture2D" uid="uid://cvvs1pvjjvcr2" path="res://assets/sprites/ui/inventory_background.png" id="2_qia20"]
[ext_resource type="FontFile" uid="uid://bn0mym6vxgjoe" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_j81vj"]
[ext_resource type="FontFile" uid="uid://dnk0wvdr4o8lk" path="res://assets/fonts/PixelOperator8.ttf" id="4_d3cbv"]

[node name="QuestDialogueComponent" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4b6k")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 0.775
offset_bottom = 12.0
grow_horizontal = 2
texture = ExtResource("2_qia20")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Name" type="Label" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.125
anchor_right = 0.2
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_j81vj")
text = "Accept Quest:"

[node name="Content" type="RichTextLabel" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 0.995
anchor_bottom = 0.995
theme_override_fonts/normal_font = ExtResource("4_d3cbv")
theme_override_fonts/bold_font = ExtResource("3_j81vj")
text = "Eat 5 whoppers, and then eat 5 more whoppers"

[node name="Accept" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.8
anchor_right = 0.45
anchor_bottom = 0.85
size_flags_horizontal = 5
size_flags_vertical = 2
mouse_filter = 1
texture = ExtResource("2_qia20")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="PlayLabel" type="Label" parent="Accept"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.556863, 0.129412, 0.129412, 1)
theme_override_colors/font_shadow_color = Color(0.301961, 0.0745098, 0.0745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_j81vj")
theme_override_font_sizes/font_size = 24
text = "Yes"

[node name="Deny" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.8
anchor_right = 0.75
anchor_bottom = 0.85
size_flags_horizontal = 5
size_flags_vertical = 2
mouse_filter = 1
texture = ExtResource("2_qia20")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="PlayLabel" type="Label" parent="Deny"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.556863, 0.129412, 0.129412, 1)
theme_override_colors/font_shadow_color = Color(0.301961, 0.0745098, 0.0745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_j81vj")
theme_override_font_sizes/font_size = 24
text = "No"
horizontal_alignment = 1

[connection signal="gui_input" from="Accept" to="." method="_on_accept_gui_input"]
[connection signal="gui_input" from="Deny" to="." method="_on_deny_gui_input"]
